--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "echarts": "^5.4.3",
     "element-plus": "^2.6.3",
+    "jszip": "^3.10.1",
     "vue": "^3.4.21",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.3.0",
-    "xlsx": "^0.18.5",
-    "jszip": "^3.10.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
