--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.6.3",
     "jszip": "^3.10.1",
     "vue": "^3.4.21",
