feat(report): 实现PDF预览功能并更新项目依赖
- 更新项目标题为深科睿研统计管理系统
- 集成pdfjs-dist库实现PDF预览功能
- 添加Element Plus图标组件支持
- 实现PDF分页浏览和缩放控制
- 添加PDF旋转和翻转功能
- 实现PDF预览错误处理和加载状态
- 优化报表管理界面布局和样式
- 更新依赖包版本配置

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.6.3",
     "jszip": "^3.10.1",
+    "pdfjs-dist": "^5.4.530",
     "vue": "^3.4.21",
     "vue-echarts": "^8.0.1",
     "vue-router": "^4.3.0",
